[tool.poetry]
name = "fintubes"
version = "0.1.0"
description = "analysis package for finnned tube condensers"
authors = ["Martyn <1931150@brunel.ac.uk>"]

[tool.poetry.dependencies]
# WARNING: keras and tensorflow installs are not mutually deterministic.
# resolved by ONLY import tensorflow.
# note this is ONLY true when using poetry.
python = "^3.9"
Markdown = "3.3.4"
matplotlib = "^3.3.4"
numpy = "1.19.5"
pandas = "^1.2.4"
scikit-learn = "0.24.2"
seaborn = "0.11.1"
statsmodels = "^0.12.2"
tensorflow = "^2.5.0"
# poetry's regex also breaks with dashes in names, so that's fun. Not using imagetob64
#imagetob64-python-markdown = {git = "https://github.com/martyn-smith/imagetob64-python-markdown.git"}
# more stuff only necessary for GTK3
pycairo = "1.20.1"
vext = "^0.7.6"
"vext.gi" = "^0.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
