[project]
name = "fintubes"
version = "0.1.0"
description = "analysis package for finnned tube condensers"
authors = [
    {name = "Martyn", email = "1931150@brunel.ac.uk"},
]
requires-python = "<4.0,>=3.9"
dependencies = [
    "Markdown==3.7",
    "matplotlib<4.0.0,>=3.9",
    "numpy>=1.19.5",
    "pandas>=2.0.0",
    "pyqt6>=6.8.1",
    "scikit-learn>=1.0",
    "seaborn>=0.13.2",
    "statsmodels<1.0.0,>=0.14.4",
    "tensorflow>=2.18.0",
    # "pycairo==1.20.1",
    # "vext<1.0.0,>=0.7.6",
    # "vext-gi<1.0.0,>=0.7.4",
]

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = []
